--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,7 +28,8 @@
               </div>
             </div>
             <div class="form-group">
-              <button [disabled]="f.invalid" class="btn btn-primary submit-btn btn-block">Login</button>
+              <button *ngIf="!cargando" [disabled]="f.invalid" class="btn btn-primary submit-btn btn-block">Login</button>
+              <button *ngIf="cargando" [disabled]="true" class="btn btn-primary submit-btn btn-block"><i class="fa fa-sync fa-spin"></i> Espere...</button>
             </div>
 
 
